#214 upgrade to Spring Boot 3